Crash when rendering curves with soft body physics (Cycles) #61906

Closed
opened 2019-02-24 08:47:11 +01:00 by Makahiya Dimakausap · 3 comments

Operating system: Windows 10
Graphics card: Intel HD

Broken: Blender 2.80, 6bab905c9d, blender2.7, 2019-02-24

Crash when rendering curves with soft body physics (Cycles)
soft body curve cycles crash.blend

  1. Choose Cycles Render
  2. Delete the default cube
  3. Add Curve - Path
  4. Enable Soft Body Physics to the Curve then Cache - Bake
  5. Press Ctrl+F12 and Blender will crash upon rendering 1st or 2nd frame
Operating system: Windows 10 Graphics card: Intel HD Broken: Blender 2.80, 6bab905c9d40, blender2.7, 2019-02-24 Crash when rendering curves with soft body physics (Cycles) [soft body curve cycles crash.blend](https://archive.blender.org/developer/F6702140/soft_body_curve_cycles_crash.blend) 1. Choose Cycles Render 2. Delete the default cube 3. Add Curve - Path 4. Enable Soft Body Physics to the Curve then Cache - Bake 5. Press Ctrl+F12 and Blender will crash upon rendering 1st or 2nd frame

Added subscriber: @moonshutr7

Added subscriber: @moonshutr7

This issue was referenced by 57777b9542

This issue was referenced by 57777b95428cef886bd3b2317b7728fa066acee1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61906
No description provided.