source/blender/blenkernel/intern/softbody.c
@@ -3037,7 +3037,7 @@ void sbFree(Object *ob)
 
 	free_softbody_intern(sb);
 
-	if ((ob->id.tag & LIB_TAG_COPIED_ON_WRITE) == 0) {
+	if ((ob->id.tag & LIB_TAG_NO_MAIN) == 0) {
 		/* Only free shared data on non-CoW copies */
 		BKE_ptcache_free_list(&sb->shared->ptcaches);
 		sb->shared->pointcache = NULL;
